--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "lang": "en",
-  "short_name": "Bible in a Year",
-  "name": "Bible in a Year",
+  "short_name": "Canon Daily",
+  "name": "Canon Daily",
   "description": "An app that shows different Bible passages each day, so you can read through the Bible in one year.",
   "icons": [
     { "src":"icons/bible_256.png", "sizes":"256x256", "type":"image/png" },
@@ -13,7 +13,7 @@
     { "src":"icons/bible_016.png", "sizes":"16x16", "type":"image/png" },
     { "src":"icons/bible.ico", "sizes":"16x16 24x24 32x32 64x64 128x128 256x256", "type":"image/x-icon" }
   ],
-  "start_url": "https://artskydj.github.io/bible-in-a-year/",
+  "start_url": "https://artskydj.github.io/canondaily.com/",
   "display": "standalone",
   "theme_color": "#404040"
 }
