--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     { "src":"icons/bible_016.png", "sizes":"16x16", "type":"image/png" },
     { "src":"icons/bible.ico", "sizes":"16x16 24x24 32x32 64x64 128x128 256x256", "type":"image/x-icon" }
   ],
-  "start_url": "https://artskydj.github.io/canondaily.com/",
+  "start_url": "https://www.canondaily.com/",
   "display": "standalone",
   "theme_color": "#404040"
 }
