--- a/_generator/package.json
+++ b/_generator/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test-bookmarks.js && node test/test-text-indentation-parser.js"
   },
   "repository": {
     "type": "git",
