--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,12 +40,17 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install dependencies and run script
+      - name: Install deps
         run: |
-          cd generator
+          pushd generator
           npm install
-          node index.js
-          ls ../_site
+          popd
+
+      - name: Install deps
+        run: node generator/index.js
+
+      - name: debug (ls _site)
+        run: ls _site
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -53,7 +58,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '/_site'
+          path: '_site'
 
       # Deploys without committing to the repo
       - name: Deploy to GitHub Pages
